--- a/bootstrapTest/others/css/music.css
+++ b/bootstrapTest/others/css/music.css
@@ -274,7 +274,7 @@ body{
     padding: 0;
     text-align: center;
     background: #555;
-    height: 3rem;
+    height: 40px;
     line-height: 3rem;
     box-shadow: 0px 3px 3px rgba(0,0,0,0.5)
 }
@@ -296,8 +296,8 @@ body{
     padding: 0;
     margin: 0;
     overflow: auto;
-    height: calc(100vh - 3rem);
     overflow-x: hidden;
+    height: 530px;
 }
 .list-scroll::-webkit-scrollbar {/*滚动条整体样式*/
     width: 10px;     /*高宽分别对应横竖滚动条的尺寸*/
@@ -313,6 +313,7 @@ body{
     border-radius: 10px;
     background: #EDEDED;
 }
+
 #player-list>.player-list-songsList>li{
     display: inline-block;
     width: 100%;
@@ -385,9 +386,8 @@ body{
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.6);
     overflow: hidden;
     transition: all 0.55s cubic-bezier(.26,-0.56,.78,1.48) ;
-    /* z-index: -1;
-    transform: rotateY(-180deg); */
-    z-index: 10;
+    z-index: -1;
+    transform: rotateY(-180deg); 
     padding: 0;
 }
 #player-search>.player-search-header{
@@ -486,7 +486,7 @@ body{
     padding: 0;
     margin: 0;
     overflow: auto;
-    height: calc(100vh - 42px);
+    height: 508px;
     overflow-x: hidden;
 }
 #player-search>.player-search-searchList>li>div{
