--- a/bootstrapTest/others/css/mobie.css
+++ b/bootstrapTest/others/css/mobie.css
@@ -88,9 +88,9 @@
 @media (min-width: 420px){
     html{font-size:16px;}
 }
-#player-list>.player-list-songsList{
-    height: calc(100vh-40px);
+#player-list>ul.player-list-songsList{
+    height: calc(100vh - 40px);
 }
-#player-search>.player-search-container{
-    height: calc(100vh-50px);
+#player-search>ul.player-search-container{
+    height: calc(100vh - 50px);
 }
